--- a/styles.css
+++ b/styles.css
@@ -98,7 +98,7 @@ justify-content: center;
 align-items: center;
 width: 170px;
 height: 170px;
-background-color: aliceblue;
+background-color: white;
 border-radius: 100px;
   }
 
@@ -250,7 +250,8 @@ border-radius: 100px;
   color:darkgrey;
 }
 
-.heading-01{
+.heading-01, .heading-02{
+  text-transform: uppercase;
   font-size: 1.5rem;
   font-weight: 500;
 }
@@ -262,17 +263,18 @@ border-radius: 100px;
 .nav-01{
   display: flex;
   justify-content: space-evenly;
-  color: #CFD2CF;
+  /* color: #CFD2CF; */
+  color: #cfd2cfcb;
   list-style-type: none;
   font-family: 'Barlow Condensed', sans-serif;
 }
 
 .li-01{
   font-weight: 500;
-  font-size: 1.1rem;
+  font-size: 1rem;
   text-transform: uppercase;
   text-decoration: none;
-  color: #CFD2CF;
+  color: #cfd2cfcb;
   display: inline-block;
   position: relative;
 }
@@ -311,7 +313,7 @@ border-radius: 100px;
 }
 
 hr{
-border: 1px solid  #CFD2CF;
+border: 1px solid  #cfd2cf60;
 opacity: 0.5;
 
 }
@@ -343,13 +345,15 @@ opacity: 0.5;
   justify-content: center;
 }
 
-.nav-02{
+.nav-02, .nav-03{
   display: flex;
   justify-content: center;
   color: #CFD2CF;
   list-style-type: none;
   padding-top: 1rem;
 }
+
+
 
 .img-02{
 height: 300px;
@@ -375,11 +379,14 @@ height: 300px;
 }
 
 .heading-02-02{
+  text-transform: uppercase;
   color: #959995;
-  font-size: 2rem;
+  font-size: 1.5rem;
 }
 
 .p-02-02{
+  text-transform: uppercase;
+  font-family: 'Bellefair', serif; 
   color: #CFD2CF;
   font-size: 2.5rem;
 }
@@ -427,18 +434,26 @@ height: 300px;
 }
 
 .tech-p2{
-  font-size: 1.2rem;
+  font-size: 1.1rem;
 }
 
 .tech-p{
   text-transform: uppercase;
 }
 
-.desktop-heading-02, .desktop-nav{
+.desktop-heading-02, .desktop-nav, .desktop-heading{
   display: none;
 }
 
+
+
 @media (min-width:768px) {
+
+
+  .desktop-num{
+    font-family: 'Barlow Condensed', sans-serif;
+    font-weight: 500;
+  }
 
   .two-divs {
     justify-content: center;
@@ -448,8 +463,11 @@ height: 300px;
   width: 500px;
 }
 
-  .mobile-nav, .heading-02{
+  .mobile-nav, .heading-02, .mobile-heading{
     display: none;
+  }
+  .desktop-heading{
+    display: block;
   }
 
   a{
@@ -478,7 +496,7 @@ height: 300px;
     position: relative;
     top: -24px;
     left: 15px;
-    width: 430px;
+    width: 530px;
     padding-left: 30px;
     padding-bottom: 10px;
 }
@@ -563,6 +581,217 @@ order: 1;
 
 .text-03 {
     margin-top: 2rem;
+}
+
+}
+
+@media (min-width:1024px) {
+
+
+  .li-01-01{
+    /* display: inline-block; */
+    position: relative;
+  }
+
+
+  .li-01-01:after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    transform: scaleX(0);
+    height: 3px;
+    bottom: -40px;
+    left: 0;
+    background-color:white;
+    transform-origin: bottom right;
+    transition: transform 0.25s ease-out;
+}
+
+.li-01-01:hover:after {
+  transform: scaleX(1);
+  transform-origin: bottom left;
+}
+  .heading-02 {
+    text-transform: uppercase;
+    display: block;
+    position: relative;
+    left: -779px;
+}
+  hr {
+    bottom: -25px;
+    position: relative;
+    width: 500px;
+    display: block;
+}
+  
+.nav-02, .nav-03 {
+  display: flex;
+  justify-content: center;
+  color: #CFD2CF;
+  list-style-type: none;
+  /* padding-top: 1rem; */
+  padding-right: 3rem;
+}
+
+
+.desktop-heading{
+  padding-left: 5rem;
+}
+
+  .two-divs {
+    display: flex;
+    justify-content: space-around;
+    align-items: self-end;
+    margin-top: 5rem;
+}
+
+.text-content {
+  justify-items: normal;
+  width: 425px;
+  text-align: left;
+}
+
+.two-divs-01{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.img-01 {
+  width: 350px;
+}
+
+.two-divs-02-02 {
+  display: flex;
+  justify-content: space-around;
+  align-items: end;
+}
+
+
+.img-02 {
+  height: 440px;
+  position: relative;
+  bottom: -20px;
+}
+
+.text-02 {
+  text-align: left;
+  width: 400px;
+}
+
+.nav-02 {
+  margin-top: 4rem;
+  justify-content:left;
+
+}
+
+.content-02 {
+margin-top: 0.5rem;
+}
+
+.two-divs-02 {
+  display: flex;
+  justify-content: space-around;
+  position: relative;
+  left: -37px;
+}
+
+.info {
+  grid-gap: 30px;
+  text-align: left;
+  justify-items: left;
+}
+
+.info-3{
+  display: flex;
+  order: -1;
+  align-items: center;
+}
+
+.nav-03{
+  display: grid;
+}
+
+.text-01 {
+text-align: left;
+}
+
+.tech-p1 {
+  font-size: 2rem;
+}
+
+.text-03{
+  width: 450px;
+  text-align: left;
+  margin-top: 0;
+}
+
+.img-03 {
+  width: 340px;
+  position: relative;
+  left: 97px;
+}
+
+.stats-grid {
+  text-align: left;
+}
+.dot-one, .dot-two, .dot-three {
+  width: 55px;
+  height: 55px;
+}
+
+.dot-one:hover, .dot-two:hover, .dot-three:hover{
+  cursor: pointer;
+}
+
+}
+
+@media (min-width:1366px) {
+
+  .conatiner {
+    margin: 1.5rem 3rem;
+}
+
+.desktop-nav {
+  backdrop-filter: blur(80px);
+  height: 100px;
+  top: -11px;
+  left: 50px;
+  width: 750px;
+  padding-left: 80px;
+  padding-bottom: 10px;
+}
+
+.circle {
+  width: 200px;
+  height: 200px;
+  background-color: rgb(255, 255, 255);
+  border-radius: 100px;
+}
+.two-divs-01{
+  padding: 0 2rem;
+}
+
+.info {
+  grid-gap: 30px;
+  text-align: left;
+  justify-items: left;
+}
+
+.text-01 {
+  text-align: left;
+}
+
+.img-01 {
+  width: 400px;
+}
+
+/* .img-02 {
+  bottom: -77px;
+} */
+
+.img-03{
+ left: 155px;
 }
 
 }
